--- a/style.css
+++ b/style.css
@@ -4,7 +4,27 @@
 	box-sizing: border-box;
 }
 header{
-	background-image: url("./images/header\ bag.jpg");
 	width: 100%;
 	height: 500px;
+	background-image: url("./images/header\ bag.jpg");
+	background-position: contain;
+	background-size: 100%;
+	position: relative;
+}
+nav{
+	width: 70%;
+	height: 60px;
+	border: 1px solid #000;
+	background-color: #00000044;
+	position: absolute;
+	top: 30px;
+	left: 10%;
+	/* margin-top: 20px; */
+	
+}
+.left img{
+	width: 50px;
+	height: 50px;
+	border-radius: 100%;
+	padding: 10px;
 }
