--- a/style.css
+++ b/style.css
@@ -19,12 +19,57 @@ nav{
 	position: absolute;
 	top: 30px;
 	left: 10%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	border-radius: 10px;
 	/* margin-top: 20px; */
 	
+}
+.left{
+	width: 120px;
+	/* border: 1px solid red; */
+	display : flex;
+	align-items: center;
+	justify-content: space-between;
 }
 .left img{
 	width: 50px;
 	height: 50px;
 	border-radius: 100%;
 	padding: 10px;
+	color: #ffffffc7;
+}
+.word-logo{
+	color: #ffffffc1;
+	font-size: 20px;
+	font-weight: light;
+	font-family: cursive;
+}
+ol{
+	width: 350px;
+	height: 50px;
+	/* border: 1px solid red; */
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+}
+ol li{
+	list-style-type: none;
+	color:#fff;
+	font-weight: bolder;
+	font-size: 12px;
+	font-family: cursive;
+}
+li:hover{
+	color: orange;
+	cursor: pointer;
+}
+.reservation{
+	padding: 10px 20px;
+	color: #ffffffc1;
+	border: 1.5px solid #fff;
+	background-color: transparent;
+	border-radius: 20px;
+
 }
