--- a/style.css
+++ b/style.css
@@ -74,11 +74,11 @@ li:hover{
 
 }
 .center{
-	width: 350px;
+	width: 330px;
 	height: 280px;
-	border: 1px solid black;
+	/* border: 1px solid black; */
 	position: relative;
-	top: 25%;
+	top: 30%;
 	left: 30%;
 }
 .about-company{
@@ -105,9 +105,49 @@ li:hover{
 	font-size: 14px;
 	font-family: sans-serif;
 	font-weight: bolder;
-	padding-top:10px;
+	padding-top:15px;
 	
 }
+.twin-bbtn{
+	/* padding: 10px 20px; */
+	width: 130px;
+	height: 30px;
+	margin: 30px 0px 0px 30px;
+	/* display: inline-block; */
+	border-radius: 100px;
+	/* border: none;
+	background-color: none; */
+}
+.right-hand{
+	background-color: orange;
+	color: #fff;
+	font-size: 12px;
+	font-weight: bold;
+	font-family: sans-serif;
+	border: none;
 
+}
+.right-hand:hover{
+	background-color: transparent;
+	color: orange;
+	cursor: pointer;
+}
+.left-hand{
+	background-color: transparent;
+	border: none;
+	color: #fff;
+	font-size: 12px;
+	font-weight: bold;
+	font-family: sans-serif;
+}
+.left-hand:hover{
+	background-color: orange;
+	color: #fff;
+	font-size: 12px;
+	font-weight: bold;
+	font-family: sans-serif;
+	border: none;
+	cursor: pointer;
+}
 
 
