--- a/style.css
+++ b/style.css
@@ -209,6 +209,17 @@ section{
 	background-color: hsla(0, 95%, 8%, 0.65);
 	color: #fff;
 	margin-top: 40px;
+	border: none;
+	
+}
+.meet-barri:hover{
+	color: orange;
+	background-color: #fff;
+	cursor: pointer;
+}
+main{
+	width: 100%;
+	height: 500px;
 	
 }
 
