--- a/style.css
+++ b/style.css
@@ -220,7 +220,14 @@ section{
 main{
 	width: 100%;
 	height: 500px;
-	
+	background-color: rgba(244, 150, 150, 0.616);
+
+}
+.four-cousins{
+	width: 23%;
+	height: 200px;
+	border-radius:50px;
+	background-image: url(./images)
 }
 
 
