--- a/style.css
+++ b/style.css
@@ -227,7 +227,9 @@ main{
 	width: 23%;
 	height: 200px;
 	border-radius:50px;
-	background-image: url(./images)
+	background-color:red;
+	border: 2px solid#000;
+
 }
 
 
