--- a/style.css
+++ b/style.css
@@ -221,16 +221,19 @@ main{
 	width: 100%;
 	height: 500px;
 	background-color: rgba(244, 150, 150, 0.616);
+	display: flex;
+	justify-content: space-between;
 
 }
 .four-cousins{
 	width: 23%;
-	height: 200px;
+	height: 300px;
 	border-radius:50px;
 	background-color:red;
 	border: 2px solid#000;
 
 }
+
 
 
 
