--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ main{
 	height: 350px;
 	border-radius:20px;
 	/* background-color:red; */
-	border: 2px solid#000;
+	/* border: 2px solid#000; */
 }
 .one{
 	background-image: url(./images/senior-man-white-sweater-eyeglasses.jpg);
@@ -239,7 +239,16 @@ main{
 	
 }
 .two{
-	
+	background-image: url(./images/small-business-owner-drinking-coffee.jpg);
+	background-size: 100% 100%;
+}
+.three{
+	background-image: url(./images/young-beautiful-woman-pink-warm-sweater-natural-look-smiling-portrait-isolated-long-hair.jpg);
+	background-size: 100% 100%;
+}
+.four{
+	background-image: url(./images/smiley-business-woman-working-cashier.jpg);
+	background-size: 100% 100%;
 }
 
 
