--- a/style.css
+++ b/style.css
@@ -153,7 +153,8 @@ li:hover{
 section{
 	width: 100%;
 	height: 500px;
-	background-color: hsla(0, 95%, 8%, 0.65);
+	/* background-color: hsla(0, 95%, 8%, 0.65); */
+	background-color: #4C3A22;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
@@ -220,10 +221,11 @@ section{
 main{
 	width: 100%;
 	height: 500px;
-	background-color: rgba(244, 150, 150, 0.616);
+	/* background-color: rgba(244, 150, 150, 0.616); */
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	background-color: #B68751;
 
 }
 .four-cousins{
