--- a/style.css
+++ b/style.css
@@ -296,8 +296,20 @@ main{
 }
 article{
 	width: 100%;
-	height: 400px;
+	height: 500px;
+	background-image: url("./images/header\ bag.jpg");
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 	
+}
+.transparent-twinny{
+	width: 30%;
+	height: 400px;
+	border: 1px solid #000;
+	background-color: transparent;
+	border-radius: 20px;
+
 }
 
 
